dropshot/tests/fail/README.adoc
:showtitle:
:toc: left
:icons: font

= Trybuild fail tests

This directory contains a number of test fixtures run via https://docs.rs/trybuild[trybuild]. All of these tests are expected to produce compile-time failures. The goal of these tests is to ensure that we produce reasonable error messages--or at least that we turn good error messages into bad ones.

Each test fixture should test one endpoint. While it's possible to stuff several endpoints into a single test fixture, it becomes hard to read the errors and ensure that all the right ones are being generated.

== Numbered tests

There are several tests here of the general form:

- `bad_endpointN.rs`
- `bad_channelN.rs`

The specific situations being tested are mirrored across tests with the same N. For example, `bad_endpoint2.rs` and `bad_channel2.rs` test the situation where a `self` argument is passed in.

For channels:

- Some of these tests may be mirrored as multiple closely-related tests. For example, endpoints require that at least one argument is present, so `bad_endpoint1.rs` tests the situation where no arguments have been provided. But channels require that at least _two_ arguments are present, so we have `bad_channel1a.rs`, which passes in zero arguments, and `bad_channel1b.rs`, which passes in one argument.

- Some of these tests may be moot. In this case, we check in text files with the rationale for skipping. For example, `bad_channel7.txt`.

In either case, we do not renumber tests--instead, we skip that number so the fixtures afterwards stay consistent, 
